# Unlearn-Saliency

./: .gitignore
Classification/: .gitignore  01train.ipynb  02mask.ipynb  03unlearn.ipynb  README.md  requirements.txt
PEM_composition_img_gen/: .env_template  01_train_test.ipynb  01_train_test_munba.ipynb  01_train_test_naruto.ipynb  02_train_test_class.ipynb  Dockerfile  Makefile  debug unified training.ipynb  delete.ipynb  docker-compose.yml  pyproject.toml  run_batch_cluster.sh  run_cluster.def  run_cluster.sh  run_cluster_batch.sh  train_text_to_image_lora.py  train_text_to_image_lora_munba.py
PEM_composition_text/: 01_train_test.ipynb  Dockerfile  Makefile  Untitled.ipynb  docker-compose.yml  gpt2_scale.py  pyproject.toml  run_clm_noconcat.py  toxicity_score.py
PEM_composition_text/transformers/: dependency_versions_table.py
PEM_composition_text/transformers/adapters/: utils.py
SD/: run.ipynb
libs/datasets/: __init__.py  base.py  cifar.py  coco.py  imagenette.py  local.py
libs/evaluator/: __init__.py
libs/integrations/: __init__.py
libs/metrics/: __init__.py  base.py  classification_accuracies.py  fid.py  image.py  image_and_image.py  image_and_text.py
libs/unlearner/: __init__.py  lora.py
libs/utils/: gradient_weighting.py  logger.py  model_management.py  training.py
tests/: test datasets.ipynb
