[tool.poetry]
name = "unlearning"
version = "0.1.0"
description = ""
authors = ["Leonardo Benitez <lsbenitezpereira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
accelerate = "~1.3"
torch = ">=1.3"
transformers = ">=4.21"
datasets = ">=1.8.0"
sentencepiece = "!=0.1.92"
protobuf = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::numba.core.errors.NumbaDeprecationWarning",
    "ignore:.*nopython=False.*",
]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
no_warn_incomplete_stub = true
disable_error_code = [
    "import-untyped", 
    "import-not-found"
]
explicit_package_bases = true
install_types = true
non_interactive = true
