[tool.poetry]
name = "unlearning"
version = "0.1.0"
description = ""
authors = ["Leonardo Benitez <lsbenitezpereira@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
accelerate = "*"
torch = ">=1.3"
datasets = "~2.9"
fsspec= "2023.9.2"  # Due to this bug: https://stackoverflow.com/questions/77433096/notimplementederror-loading-a-dataset-cached-in-a-localfilesystem-is-not-suppor
sentencepiece = "!=0.1.92"
protobuf = "*"
tokenizers = "0.21.0"
regex = "2024.11.6"
detoxify = "0.5.1"
pandas = "~2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::numba.core.errors.NumbaDeprecationWarning",
    "ignore:.*nopython=False.*",
]
asyncio_default_fixture_loop_scope = "function"

[tool.mypy]
no_warn_incomplete_stub = true
disable_error_code = [
    "import-untyped", 
    "import-not-found"
]
explicit_package_bases = true
install_types = true
non_interactive = true
